tests/analyzer/errors/struct_no_init.rv
struct Foo {}

fn main() {
    var a = Foo()
}
